# boos

./: .gitignore  CMakeLists.txt  README.md  conanfile.py
include/: boosapi.h  movie.h  room.h  seat.h  theater.h
src/: boosapi.cpp  main.cpp  room.cpp  seat.cpp  theater.cpp
test_package/: CMakeLists.txt  conanfile.py  test_api.cpp  test_room.cpp  test_seat.cpp  test_theater.cpp
